<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/rxcode"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/logo"
                android:layout_alignParentTop="true"
                android:layout_marginTop="36dp" />
        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">
            <android.support.v7.widget.CardView
                xmlns:cardview="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/pictureCard"
                android:layout_width="match_parent"
                cardview:cardBackgroundColor="@color/colorPrimaryDark"
                android:layout_height="@dimen/height_cardview"
                android:fitsSystemWindows="true"
                cardview:cardCornerRadius="@dimen/cornerradio_cardview"
                android:layout_marginBottom="@dimen/activity_vertical_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_horizontal_login">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextWhite"
                        android:layout_marginBottom="@dimen/separacion">
                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextWhite"
                        android:layout_marginBottom="@dimen/separacion"
                        app:passwordToggleEnabled="true">
                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:ems="10"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>
                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_button_login"
                        android:theme="@style/RaisedButtonDark" />
                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/dontHaveAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dont_Have_Account"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                            android:textSize="@dimen/textsize_donthaveaccount"/>
                        <TextView
                            android:id="@+id/createHere"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/create_here"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                            android:textSize="@dimen/textsize_donthaveaccount"
                            android:layout_toRightOf="@id/dontHaveAccount" />

                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
